--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stormforge",
-  "description": "A DataStorm to manage instantiation of virtual resources across providers",
-  "version": "0.1.0",
+  "description": "A YANG module to manage virtual resources across multiple providers",
+  "version": "0.2.0",
   "author": "Peter K. Lee <peter@intercloud.net>",
   "homepage": "http://stormstack.org",
   "license": "MIT",
@@ -13,13 +13,14 @@
     "bunyan": "^0.23.1",
     "minimist": "0.1.0",
     "promise": "^6.0.1",
-    "stormify": ">=0.5.0"
+    "yang-storm": ">=0.2.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
     "coffee-script": ">=1.8.0",
     "mocha": "^2.0.1",
-    "sinon": "^1.12.1"
+    "sinon": "^1.12.1",
+		"stormify": ">=0.5.3"
   },
   "optionalDependencies": {},
   "engines": {
@@ -32,7 +33,6 @@
     "test": "mocha test --recursive"
   },
   "contributors": [
-		"Ravi Chunduru",
-		"Siva Busa"
+		"Ravi Chunduru"
   ]
 }
