--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "url": "git://github.com/stormstack/stormforge.git"
   },
   "dependencies": {
-    "bunyan": "^0.23.1",
-    "minimist": "0.1.0",
     "promise": "^6.0.1",
-    "yang-storm": ">=0.3.2"
+    "yang-storm": "^0.3.4"
   },
   "devDependencies": {
     "chai": "^1.10.0",
