--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stormforge",
-  "description": "A YANG module to manage virtual resources across multiple providers",
-  "version": "0.2.6",
+  "description": "Framework to create and run new STORM modules",
+  "version": "0.3.0",
   "author": "Peter K. Lee <peter@intercloud.net>",
   "homepage": "http://stormstack.org",
   "license": "MIT",
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "promise": "^6.0.1",
-		"yang-compiler": "^0.3.0",
-    "yang-storm": "^0.3.14"
+		"yang-compiler": "^0.3.1",
+    "yang-storm": "^0.3.16"
   },
   "devDependencies": {
     "chai": "^1.10.0",
