key improvements to the opnfv-promise data model definition, ensure proper preprocessing via latest YangForge, introduces definitions around RPC INTENT methods

--- a/opnfv-promise.yaml
+++ b/opnfv-promise.yaml
@@ -19,7 +19,7 @@ keywords:
   - allocation
 
 schema: !yang/schema opnfv-promise.yang
-config: !json        opnfv-promise.json
+#config: !json        opnfv-promise.json
 
 dependencies:
   nfv-infrastructure: !yang/schema nfv-infrastructure.yang
