--- a/opnfv-promise.yaml
+++ b/opnfv-promise.yaml
@@ -31,6 +31,18 @@ dependencies:
 module:
   opnfv-promise:
     # rebind to be a computed property
+    promise.capacity.total: !coffee/function |
+      (prev) -> @computed (->
+        combine = (a, b) ->
+          for k, v of b.capacity when v?
+            a[k] ?= 0
+            a[k] += v
+          return a
+        (@parent.get 'pools')
+        .filter (entry) -> entry.active is true
+        .reduce combine, {}
+      ), type: prev
+    # rebind to be a computed property
     promise.capacity.reserved: !coffee/function |
       (prev) -> @computed (->
         combine = (a, b) ->
@@ -45,7 +57,7 @@ module:
     # rebind to be a computed property
     promise.capacity.available: !coffee/function |
       (prev) -> @computed (-> 
-        total = @get 'quota'
+        total = @get 'total'
         reserved = @get 'reserved'
         usage = @get 'usage'
         for k, v of total when v?
@@ -56,6 +68,10 @@ module:
 
 # COMPLEX-TYPE model active bindings
 complex-type:
+  ResourcePool:
+    active: !coffee/function |
+      (prev) -> @computed (-> true ), type: prev
+
   ResourceReservation:
     # private properties (NOT in YANG schema)
     max-duration: !coffee/function |
@@ -114,7 +130,7 @@ complex-type:
           resolve res
         .catch (e) -> reject e
 
-# RPC definitions
+# RPC definitions (INTENT interfaces)
 rpc:
   create-reservation: !coffee/function |
     (input, output, done) ->
@@ -144,6 +160,49 @@ rpc:
         output.set 'result', 'error'
         output.set 'message', e
         done()
+
+  query-reservation: !coffee/function |
+    (input, output, done) ->
+      # 1) we gather up all reservations that match the specified window
+      window = input.get 'window'
+      reservations = (@get 'promise.reservations').where
+        start: (value) -> (not window.end?)   or (new Date value) <= (new Date window.end)
+        end:   (value) -> (not window.start?) or (new Date value) >= (new Date window.start)
+      if window.scope is 'exlusive'
+        # yes, we CAN query filter in one shot above but this makes logic cleaner...
+        reservations = reservations.where
+          start: (value) -> (not window.start?) or (new Date value) >= (new Date window.start)
+          end:   (value) -> (not window.end?) or (new Date value) <= (new Date window.end)
+
+      # 2) we calculate the deltas based on start/end times of each reservation
+      deltas = reservations.reduce ((a, b) ->
+        [ skey, ekey ] = [ (b.start.split 'T')[0], (b.end.split 'T')[0] ]
+        a[skey] ?= count: 0, capacity: {}
+        a[ekey] ?= count: 0, capacity: {}
+        a[skey].count += 1
+        a[ekey].count -= 1
+        for k, v of b.capacity when v?
+          a[skey].capacity[k] ?= 0
+          a[skey].capacity[k] += v
+          a[ekey].capacity[k] ?= 0
+          a[ekey].capacity[k] -= v
+        return a
+      ), {}
+
+      # 3) we then sort the timestamps and aggregate the deltas
+      last = count: 0, capacity: {}
+      usages = for timestamp in Object.keys(deltas).sort()
+        entry = deltas[timestamp]
+        entry.timestamp = (new Date timestamp).toJSON()
+        entry.count += last.count
+        for k, v of entry.capacity
+          entry.capacity[k] += (last.capacity[k] ? 0)
+        last = entry
+        entry
+
+      output.set 'reservations', reservations.map (e) -> e.id
+      output.set 'utilization', usages
+      done()
 
   update-reservation: !coffee/function |
     (input, output, done) ->
@@ -183,6 +242,10 @@ rpc:
         output.set 'result', 'error'
         output.set 'message', e
         done()
+
+  register-pool: !coffee/function |
+    (input, output, done) ->
+      
 
   # TEMPORARY
   add-provider: !coffee/function |
