--- a/opnfv-promise.yaml
+++ b/opnfv-promise.yaml
@@ -134,6 +134,44 @@ complex-type:
         if start? and end? and start > end
           retun reject "requested start time must be earlier than end time"
         resolve this
+
+    update: !coffee/function |
+      (prev) -> (req, resolve, reject) ->
+        req.start ?= @get 'start'
+        req.end   ?= @get 'end'
+
+        # TODO: should validate here...
+        console.log "updating reservation #{@id}"
+        console.log this
+
+        @parent.invoke 'query-capacity',
+          start: req.start
+          end: req.end
+          capacity: 'available'
+          without: @id
+        .then (res) =>
+          unless (res.get 'collections').length > 0
+            return reject 'no resource capacity available during requested start/end time'
+
+          entries = res.get 'utilization'
+          start = new Date req.start
+          end   = new Date req.end
+          for x in [0..entries.length-1]
+            t1 = new Date entries[x].timestamp
+            break unless t1 < end
+
+            if x < entries.length-1
+              t2 = new Date entries[x+1].timestamp
+              continue unless t2 > start
+
+            available = entries[x].capacity
+            for k, v of req.capacity when v? and !!v
+              unless available[k] >= v
+                return reject "requested #{k}=#{v} exceeds available #{available[k]} between #{t1} and #{t2}"
+          @set req
+          resolve this
+        .catch (err) -> reject err
+
     save: !coffee/function |
       (prev) -> (resolve, reject) ->
         @invoke 'validate', @get()
@@ -150,62 +188,25 @@ complex-type:
 rpc:
   create-reservation: !coffee/function |
     (input, output, done) ->
-      # 1. create the reservation record
-      reservation = @create 'ResourceReservation', input.get()
-      requested = reservation.get 'capacity'
-      for k, v of requested
-        delete requested[k] unless v? and !!v
-
+      # 1. create the reservation record (empty)
+      reservation = @create 'ResourceReservation'
       reservations = @access 'promise.reservations'
 
-      # 2. verify that requested capacity is available
-      @invoke 'query-capacity',
-        start: reservation.get 'start'
-        end:   reservation.get 'end'
-        capacity: 'available'
+      # 2. update the record with requested input
+      reservation.invoke 'update', input.get()
       .then (res) ->
-        unless (res.get 'collections').length > 0
-          output.set 'result', 'error'
-          output.set 'message', 'no resource capacity available during requested start/end time'
-          return done()
-
-        entries = res.get 'utilization'
-        start = new Date reservation.get 'start'
-        end   = new Date reservation.get 'end'
-        for x in [0..entries.length-1]
-          t1 = new Date entries[x].timestamp
-          break unless t1 < end
-
-          if x < entries.length-1
-            t2 = new Date entries[x+1].timestamp
-            continue unless t2 > start
-
-          available = entries[x].capacity
-          for k, v of requested
-            unless available[k] >= v
-              output.set 'result', 'conflict'
-              output.set 'message', "requested #{k}=#{v} exceeds available #{available[k]} between #{t1} and #{t2}"
-              return done()
-
-        # 3. verify that the requested resource identifiers are available
-        # TODO...
-
-        # 4. save the reservation record
-        reservation.save()
+        # 3. save the record and add to list
+        res.save()
         .then ->
-          reservations.push reservation
-          output.set 'result', 'ok'
-          output.set 'message', 'request accepted'
-          output.set 'reservation-id', reservation.id
+          reservations.push res
+          output.set result: 'ok', message: 'reservation request accepted'
+          output.set 'reservation-id', res.id
           done()
-        .catch (e) ->
-          output.set 'result', 'error'
-          output.set 'message', e
+        .catch (err) ->
+          output.set result: 'error', message: err
           done()
-
-      .catch (err) ->
-        output.set 'result', 'error'
-        output.set 'message', e
+      .catch (err) -> 
+        output.set result: 'conflict', message: err
         done()
 
   query-reservation: !coffee/function |
@@ -221,32 +222,41 @@ rpc:
 
   update-reservation: !coffee/function |
     (input, output, done) ->
-      reservation = @find 'ResourceReservation', input.get 'reservation-id'
-      requested = input.get 'capacity'
-      reserved  = reservation.get 'capacity'
-      available = @get 'promise.capacity.available'
-      for k, v of requested when v?
-        unless requested[k] <= (available[k] + reserved[k])
-          output.set 'result', 'conflict'
-          output.set 'message', "requested #{k}=#{v} exceeds #{available[k] + reserved[k]}"
-          return done()
+      # TODO: we shouldn't need this... need to check why leaf mandatory: true not being enforced
+      unless (input.get 'reservation-id')?
+        output.set result: 'error', message: "must provide 'reservation-id' parameter"
+        return done()
 
-      reservation.invoke 'validate', input.get()
+      # 1. find the reservation
+      reservation = @find 'ResourceReservation', input.get 'reservation-id'
+      unless reservation?
+        output.set result: 'error', message: 'no reservation found for specified identifier'
+        return done()
+
+      # 2. update the record with requested input
+      reservation.invoke 'update', input.get()
       .then (res) ->
-        res.set input.get()
+        # 3. save the updated record
         res.save()
         .then ->
-          output.set 'result', 'ok'
-          output.set 'message', 'update accepted'
+          output.set result: 'ok', message: 'reservation update successful'
           done()
-        .catch (e) ->
-          output.set 'result', 'error'
-          output.set 'message', e
+        .catch (err) ->
+          output.set result: 'error', message: err
           done()
+      .catch (err) ->
+        output.set result: 'conflict', message: err
+        done()
 
   cancel-reservation: !coffee/function |
     (input, output, done) ->
+      # 1. find the reservation
       reservation = @find 'ResourceReservation', input.get 'reservation-id'
+      unless reservation?
+        output.set result: 'error', message: 'no reservation found for specified identifier'
+        return done()
+
+      # 2. destroy all traces of this reservation
       reservation.destroy()
       .then =>
         (@access 'promise.reservations').remove reservation.id
@@ -281,6 +291,9 @@ rpc:
         matches = matches.where
           start: (value) -> (not window.start?) or (new Date value) >= (new Date window.start)
           end:   (value) -> (not window.end?) or (new Date value) <= (new Date window.end)
+
+      # exclude any identifiers specified
+      matches = matches.without id: (input.get 'without')
 
       output.set 'collections', matches
       unless (input.get 'show-utilization') is true
